[package]
name = "copycat"
version = "0.1.1"
edition = "2021"

[lib]
name = "copykitty"
path = "src/lib.rs"

[[bin]]
name = "copycat"
path = "src/copycat.rs"


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
num_cpus = "1.16.0"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
